# inline-rust

./: .gitignore  .travis.yml  LICENSE  README.md  appveyor.yml  inline-rust.cabal  stack.yaml
examples/: ADT.hs  Hello.hs  Integrate.hs  Omnibus.hs  Pi.hs  PreludeStuff.hs  Regex.hs  Sort.hs  Struct.hs  YourNumber.hs
src/Language/Rust/: Inline.hs
src/Language/Rust/Inline/: Context.hs  Internal.hs  Marshal.hs  Parser.hs  Pretty.hs  TH.hs
src/Language/Rust/Inline/Context/: Prelude.hs
src/Language/Rust/Inline/Storable/: TH.hs
src/Language/Rust/Inline/TH/: ReprC.hs  Storable.hs  Utilities.hs
tests/: AlgebraicDataTypes.hs  CompoundTypes.hs  FunctionPointerTypes.hs  GhcUnboxedTypes.hs  Main.hs  PointerTypes.hs  PreludeTypes.hs  SimpleTypes.hs
