name:                inline-rust
version:             0.1.0.0
synopsis:            Haskell library for inline rust quasiquotes 
-- description:         
homepage:            https://github.com/harpocrates/inline-rust
license:             BSD3
author:              Alec Theriault
maintainer:          alec.theriault@gmail.com
copyright:           (c) 2017 Alec Theriault
stability:           alpha
bug-reports:         https://github.com/harpocrates/inline-rust/issues
category:            Language
build-type:          Simple
cabal-version:       >=1.10

source-repository head
  type:              git
  location:          https://github.com/harpocrates/inline-rust.git

library
  hs-source-dirs:      src
  ghc-options:         -Wall
  build-tools:         alex, happy
  default-language:    Haskell2010

  exposed-modules:     Language.Rust.Inline
                       Language.Rust.Inline.Parser
                       Language.Rust.Inline.Context

  other-extensions:    OverloadedStrings
                     , OverloadedLists
                     , PartialTypeSignatures 
                     , DeriveGeneric
                     , DeriveDataTypeable
                     , CPP
                     , DeriveFunctor

  build-depends:       base >=4.9 && <5.0
                     , language-rust
                     , prettyprinter >=1.1
                     , transformers >=0.5 && <0.6
                     , containers
                     , array >=0.5 && <0.6
                     , deepseq >=1.4.2.0
                     , bytestring >=0.10
                     , template-haskell >=2.10

