name:                inline-rust
version:             0.1.0.0
synopsis:            Haskell library for inline rust quasiquotes 
description:         Inline Rust is a library that lets you write inline Rust code via GHC's
                     support for quasiquotation.
homepage:            https://github.com/harpocrates/inline-rust
license:             BSD3
license-file:        LICENSE
author:              Alec Theriault
maintainer:          alec.theriault@gmail.com
copyright:           (c) 2017 Alec Theriault
stability:           alpha
bug-reports:         https://github.com/harpocrates/inline-rust/issues
category:            Language
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

source-repository head
  type:              git
  location:          https://github.com/harpocrates/inline-rust.git

library
  hs-source-dirs:      src
  ghc-options:         -Wall
  default-language:    Haskell2010

  exposed-modules:     Language.Rust.Inline
                       Language.Rust.Inline.TH
  other-modules:       Language.Rust.Inline.Context
                       Language.Rust.Inline.Context.Prelude
                       Language.Rust.Inline.Marshal
                       Language.Rust.Inline.Parser
                       Language.Rust.Inline.Pretty
                       Language.Rust.Inline.Internal
                       Language.Rust.Inline.TH.Storable
                       Language.Rust.Inline.TH.Utilities
                       Language.Rust.Inline.TH.ReprC

  other-extensions:    DeriveDataTypeable
                     , CPP
                     , QuasiQuotes
                     , TemplateHaskell
                     , GeneralizedNewtypeDeriving
                     , ForeignFunctionInterface
                     , ScopedTypeVariables

  build-depends:       base                 >=4.9 && <5.0
                     , language-rust        >=0.2.0
                     , prettyprinter        >=1.1
                     , process              >=1.4
                     , random               >=1.0
                     , transformers         >=0.5 && <0.6
                     , array                >=0.5 && <0.6
                     , template-haskell     >=2.13
                     , filepath             >=1.4.0.0
                     , directory            >=1.3.0.0
                     , bytestring           >=0.10

test-suite spec
  hs-source-dirs:      tests
  ghc-options:         -threaded
--  extra-libraries:     System resolv c m
  main-is:             Main.hs
  
  type:                exitcode-stdio-1.0
  default-language: Haskell2010
  other-modules:       SimpleTypes
                     , GhcUnboxedTypes
  build-depends:       base
                     , inline-rust
                     , hspec
                     , ghc-prim
